Adapt doxygen to ddln
 * Support <abbr> tag
 * Package as .tar.gz with BUILD.go for DBT
 * Use section title as section id in markdown

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -197,5 +197,7 @@ add_subdirectory(addon)
 enable_testing()
 add_subdirectory(testing)
 
+install(FILES BUILD.go DESTINATION ".")
+
 include(cmake/packaging.cmake) # set CPACK_xxxx properties
 include(CPack)
